# Licenta_display_driver

./: .gitignore
application/: CMakeLists.txt  Makefile  READ ME  change_resolution.sh  connect.sh  download.sh  download_app.sh  iliDriver.service  install.sh  main.c  make.sh  out.file  registers.h  startIliDriver  start_server.sh  tips.txt  upload.sh
application/include/driver/: display.h  frameBuffer.h  ili9341Shield.h  touchScreen.h
application/src/: main.c
application/src/driver/: display.c  frameBuffer.c  ili9341Shield.c  touchScreen.c
display_driver/: Makefile  gpio_test.c  remote_script.sh  run.sh  upload.sh
fb_optim/: main.c
frameBuffer/: Makefile  connect.sh  main.c
touchScreen/: Makefile  main.c
